@@ -1,3 +1,6 @@
+2019-08-19
+- Fix ft2nfdump next hop and ip router fields
+
 2019-08-16
 - Cleanup and fix IPv6 network display in war records.
 
